Добавил функцию зума для фотографий товара, докрутил фильтры на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -759,7 +759,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="filter-item filter-item">
+                                <div class="filter-item values">
                                     <button class="filter-item__header">
                                         Тип монтажа
                                     </button>
@@ -789,7 +789,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="filter-item filter-item">
+                                <div class="filter-item values collapse">
                                     <button class="filter-item__header">
                                         Цвет
                                     </button>
@@ -816,46 +816,18 @@
                                                     <span class="filter-count">101</span>
                                                 </label>
                                             </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="filter-item range">
-                                    <button class="filter-item__header">
-                                        Ширина встраивания
-                                    </button>
-                                    <div class="filter-item__props">
-                                        <ul class="filter-item__list">
                                             <li class="filter-item__value">
-                                                <div class="filter-item__slider"></div>
-                                                <div class="filter-item__inputs">
-                                                    <input class="filter-item__input" type="number" min="0"
-                                                        max="99999999" placeholder="">
-                                                    <div class="divider">—</div>
-                                                    <input class="filter-item__input" type="number" min="0"
-                                                        max="99999999" placeholder="">
-                                                </div>
+                                                <input type="checkbox" id="filter7">
+                                                <label class="filter-item__label" for="filter7">
+                                                    <span>Бежевый</span>
+                                                    <span class="filter-count">101</span>
+                                                </label>
                                             </li>
                                         </ul>
                                     </div>
-                                </div>
-                                <div class="filter-item range">
-                                    <button class="filter-item__header">
-                                        Ширина встраивания
+                                    <button class="filter-item__footer">
+                                        Больше
                                     </button>
-                                    <div class="filter-item__props">
-                                        <ul class="filter-item__list">
-                                            <li class="filter-item__value">
-                                                <div class="filter-item__slider"></div>
-                                                <div class="filter-item__inputs">
-                                                    <input class="filter-item__input" type="number" min="0"
-                                                        max="99999999" placeholder="">
-                                                    <div class="divider">—</div>
-                                                    <input class="filter-item__input" type="number" min="0"
-                                                        max="99999999" placeholder="">
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
                                 </div>
                                 <div class="filter-item range">
                                     <button class="filter-item__header">
@@ -878,11 +850,11 @@
                                 </div>
                             </div>
 
-                            <div class="filter-items-btn">
+                            <!-- <div class="filter-items-btn">
                                 <button class="filter-items-show-filters">
                                     Показать все фильтры
                                 </button>
-                            </div>
+                            </div> -->
 
                             <button class="oval-btn oval-btn--filter show">
                                 Показать
@@ -898,7 +870,7 @@
                                         Товар месяца
                                     </h4>
                                 </div>
-                                <div class="promo-box__content">
+                                <a class="promo-box__content" href="#">
                                     <div class="promo-box__img">
                                         <img src="" alt="">
                                     </div>
@@ -910,12 +882,12 @@
                                             29 900 ₽
                                         </p>
                                     </div>
-                                </div>
+                                </a>
                             </div>
-                            <div class="promo-feedback">
+                            <a class="promo-feedback" href="#">
                                 <img src="./img/woman.png" alt="">
                                 <p>Задать вопрос менеджеру</p>
-                            </div>
+                            </a>
                         </div>
                     </aside>
                 </div>
