--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@
                                     </div>
                                 </li>
                                 <li class="catalog-popup__menu-item">
-                                    <a class="catalog-popup__menu-link" href="./catalog.html">Отдельностоящая бытовая техника</a>
+                                    <a class="catalog-popup__menu-link" href="./catalog.html">Отдельностоящая бытовая
+                                        техника</a>
                                     <div class="catalog-popup__meni-icon">
                                         <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -357,7 +358,8 @@
                                     </div>
                                 </li>
                                 <li class="catalog-popup__menu-item">
-                                    <a class="catalog-popup__menu-link" href="./catalog.html">Стиральные и сушильные машины</a>
+                                    <a class="catalog-popup__menu-link" href="./catalog.html">Стиральные и сушильные
+                                        машины</a>
                                     <div class="catalog-popup__meni-icon">
                                         <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -368,7 +370,8 @@
                                     </div>
                                 </li>
                                 <li class="catalog-popup__menu-item">
-                                    <a class="catalog-popup__menu-link" href="./catalog.html">Мелкая техника для кухни</a>
+                                    <a class="catalog-popup__menu-link" href="./catalog.html">Мелкая техника для
+                                        кухни</a>
                                     <div class="catalog-popup__meni-icon">
                                         <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -379,7 +382,8 @@
                                     </div>
                                 </li>
                                 <li class="catalog-popup__menu-item">
-                                    <a class="catalog-popup__menu-link" href="./catalog.html">Кухонные мойки и аксессуары для кухни</a>
+                                    <a class="catalog-popup__menu-link" href="./catalog.html">Кухонные мойки и
+                                        аксессуары для кухни</a>
                                     <div class="catalog-popup__meni-icon">
                                         <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -439,7 +443,8 @@
                             <div class="catalog-popup__categories-menu">
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Варочные панели
                                         </a>
                                     </li>
@@ -471,7 +476,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Духовые шкафы
                                         </a>
                                     </li>
@@ -498,7 +504,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Кухонные вытяжки
                                         </a>
                                     </li>
@@ -520,7 +527,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Посудомоечные машины
                                         </a>
                                     </li>
@@ -537,7 +545,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Микроволновые печи
                                         </a>
                                     </li>
@@ -554,7 +563,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Холодильники
                                         </a>
                                     </li>
@@ -566,7 +576,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Морозильные шкафы
                                         </a>
                                     </li>
@@ -578,7 +589,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Винные шкафы
                                         </a>
                                     </li>
@@ -590,7 +602,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Стиральные машины
                                         </a>
                                     </li>
@@ -612,7 +625,8 @@
                                 </ul>
                                 <ul class="catalog-popup__categories-list">
                                     <li class="catalog-popup__categories-item">
-                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title" href="./catalog.html">
+                                        <a class="catalog-popup__categories-link catalog-popup__categories-link--title"
+                                            href="./catalog.html">
                                             Кофемашины
                                         </a>
                                     </li>
@@ -2360,6 +2374,13 @@
                 </div>
                 <div class="product-box__inner">
                     <div class="product-box__gallery">
+                        <div class="zoom-box">
+                            <div class="zoom-img">
+                                <div class="zoom-cursor"></div>
+                            </div>
+                            <div class="zoom-overlay"></div>
+                        </div>
+                        
                         <div class="swiper slider-fastview">
                             <img class="country lazyload" data-src="./img/icons/countries/italy.svg" alt="">
                             <div class="swiper-wrapper slider-fastview-wrapper">
@@ -3207,7 +3228,8 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="https://unpkg.com/imask" async=""></script>
