Поменял стили для модалок

--- a/index.html
+++ b/index.html
@@ -719,8 +719,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button-next banner__button-next "></div>
-                    <div class="swiper-button-prev banner__button-prev "></div>
+                    <div class="swiper-button-next banner__button-next round-btn"></div>
+                    <div class="swiper-button-prev banner__button-prev round-btn"></div>
                     <div class="swiper-pagination banner__pagination skeleton"></div>
                 </div>
             </div>
@@ -3739,10 +3739,8 @@
                     <div class="auth__form-group auth__form-group--checkbox">
                         <input id="registerFormEntity" type="checkbox">
                         <label for="registerFormEntity">
-                        </label>
-                        <p>
                             Хочу зарегистрироваться как юридическое лицо
-                        </p>
+                        </label>
                     </div>
                     <button class="rect-btn rect-btn--auth-register" type="submit">
                         Зарегистрироваться
