--- a/catalog.html
+++ b/catalog.html
@@ -637,7 +637,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="catalog-popup__categories-banner"
+                            <div class="promo-banner"
                                 style="background-image: url('./img/catalog-banner.png');">
                                 <p class="catalog-popup__categories-text">
                                     Не можете выбрать?
