Пофиксил окно быстрого просмотра на странице каталога + мелкие фикси стилей

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                     <div class="header__bottom-nav">
                         <button class="oval-btn oval-btn--all-categories blue" id="allCategoriesBtn">
                             Все категории
+                            <div class="close">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
                         </button>
                         <ul class="header__categories-list">
                             <li class="header__categories-item has-submenu">
@@ -2756,7 +2761,7 @@
                 <p class="brand-banner__text">
                     Кухонные стальные мойки сделанные вручную!
                 </p>
-                <a class="oval-btn oval-btn--brand-banner" href="#">
+                <a class="oval-btn oval-btn--brand-banner blue" href="#">
                     Все товары бренда
                 </a>
                 <img class="brand-banner__img" src="./img/brands/gerda-banner.png" alt="">
