--- a/catalog.html
+++ b/catalog.html
@@ -147,7 +147,7 @@
                         </div>
                         
                         <div class="header-panel__item cart-item">
-                            <a class="round-btn round-btn--header" href="#">
+                            <a class="round-btn round-btn--header" href="./cart.html">
                                 <img src="./img/icons/cart.svg" alt="Корзина">
                             </a>
                             <span>3</span>
@@ -424,7 +424,7 @@
                         </div>
                         
                         <div class="header-panel__item cart-item">
-                            <a class="round-btn round-btn--header" href="#">
+                            <a class="round-btn round-btn--header" href="./cart.html">
                                 <img src="./img/icons/cart.svg" alt="Корзина">
                             </a>
                             <span>3</span>
