--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         </div>
                         
                         <div class="header-panel__item cart-item">
-                            <a class="round-btn round-btn--header" href="#">
+                            <a class="round-btn round-btn--header" href="./cart.html">
                                 <img src="./img/icons/cart.svg" alt="Корзина">
                             </a>
                             <span>3</span>
@@ -424,7 +424,7 @@
                         </div>
                         
                         <div class="header-panel__item cart-item">
-                            <a class="round-btn round-btn--header" href="#">
+                            <a class="round-btn round-btn--header" href="./cart.html">
                                 <img src="./img/icons/cart.svg" alt="Корзина">
                             </a>
                             <span>3</span>
@@ -4155,10 +4155,10 @@
         src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <script src="https://unpkg.com/imask" async=""></script>
+    <script src="https://unpkg.com/imask"></script>
     <script type="module" src="./js/lazysizes.min.js" async=""></script>
-    <script type="module" src="./js/libs.js"></script>
-    <script type="module" src="./js/script.js"></script>
+    <script src="./js/libs.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
 </body>
 
 </html>
