Фикс скриптов и стилей

--- a/catalog.html
+++ b/catalog.html
@@ -874,7 +874,7 @@
                                 <p class="catalog-popup__categories-text">
                                     Мы вам поможем!
                                 </p>
-                                <button class="rect-btn rect-btn--catalog-popup glass">
+                                <button class="rect-btn rect-btn--catalog-popup glass feedback">
                                     Связаться с нами
                                 </button>
                             </div>
@@ -4032,7 +4032,7 @@
             <div class="footer__inner">
                 <div class="footer__info">
                     <div class="footer__info-top">
-                        <a class="footer__logo" href="./index.html" aria-label="Перейти на главную страницу сайта">
+                        <a class="footer__logo" href="#" aria-label="Перейти на главную страницу сайта">
                             <img src="./img/icons/footer/footer-logo.svg" alt="">
                         </a>
                         <p class="footer__descr">
@@ -4198,19 +4198,19 @@
                 </nav>
                 <div class="footer__bottom">
                     <div class="footer__socials">
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer vk" href="#"
                             aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
                             aria-label="Перейти на YouTube-канал компании">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer telegram" href="#"
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
