--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                                 <p class="catalog-popup__categories-text">
                                     Мы вам поможем!
                                 </p>
-                                <button class="rect-btn rect-btn--catalog-popup glass">
+                                <button class="rect-btn rect-btn--catalog-popup glass feedback">
                                     Связаться с нами
                                 </button>
                             </div>
@@ -3129,7 +3129,7 @@
                         </p>
                     </div>
                 </div>
-                <button class="rect-btn rect-btn--faq skeleton blue" id="rectBtnFaq">
+                <button class="rect-btn rect-btn--faq skeleton blue feedback" id="rectBtnFaq">
                     Задать свой вопрос
                 </button>
             </div>
@@ -3308,19 +3308,19 @@
                 </nav>
                 <div class="footer__bottom">
                     <div class="footer__socials">
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer vk" href="#"
                             aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer youtube" href="#"
                             aria-label="Перейти на YouTube-канал компании">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer telegram" href="#"
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="footer__socials-link round-btn round-btn--footer" href="#"
+                        <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
