--- a/cart.html
+++ b/cart.html
@@ -1465,17 +1465,9 @@
                                     <div class="thumb">
                                         <img src="./img/card-gallery/3.webp" alt="">
                                     </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/4.webp" alt="">
-                                    </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/5.webp" alt="">
-                                    </div>
                                 </div>
                                 <div class="thumbs-progressbar">
                                     <div class="progressbar-item current"></div>
-                                    <div class="progressbar-item"></div>
-                                    <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                 </div>
@@ -3198,8 +3190,8 @@
             });
         });
     </script>
+    <script src="./js/fancybox.umd.js"></script>
     <script src="./js/lazysizes.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="./js/cart.js" type="module"></script>
 </body>
 
